# ROS_Raw_Kitti_Player

./: .gitmodules  LICENSE  README.md
helper/: CMakeLists.txt
helper/include/helper/: tools.h
helper/src/: tools.cpp
kitti_ros/: .clang-format  CMakeLists.txt  package.xml
kitti_ros/config/: default.rviz  params.yaml
kitti_ros/config/kitti/: detection.yaml  segmenter.yaml
kitti_ros/include/kitti_ros/: kitti_data_operator.h  kitti_object_operator.h  kitti_ros_node.h
kitti_ros/include/kitti_ros/perception/: grid_cell_costmap.h  grid_cell_costmap_segmented_pcl.h  sensor_fusion.h
kitti_ros/include/kitti_ros/segmenters_lib/: base_segmenter.hpp  don_segmenter.hpp  euclidean_segmenter.hpp  ground_plane_fitting_segmenter.hpp  ground_ransac_segmenter.hpp  region_euclidean_segmenter.hpp  region_growing_segmenter.hpp  segmenter_manager.hpp
kitti_ros/include/kitti_ros/util/: kitti_ros_utils.h
kitti_ros/launch/: kitti_ros_node.launch
kitti_ros/src/: kitti_data_operator.cpp  kitti_object_operator.cpp  kitti_ros_node.cpp
kitti_ros/src/perception/: grid_cell_costmap.cpp  grid_cell_costmap_segmented_pcl.cpp  sensor_fusion.cpp
kitti_ros/src/segmenters_lib/: don_segmenter.cpp  euclidean_segmenter.cpp  ground_plane_fitting_segmenter.cpp  ground_ransac_segmenter.cpp  region_euclidean_segmenter.cpp  region_growing_segmenter.cpp
kitti_ros/src/util/: kitti_ros_utils.cpp
resources/dbw_mkz_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
resources/dbw_mkz_description/urdf/: mkz.urdf.xacro  mkz_13_structure.urdf.xacro  vehicle_gazebo.urdf.xacro  vehicle_sensors.urdf.xacro  vehicle_structure.urdf.xacro
