<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_description</name>
  <version>1.1.0</version>
  <description>
    URDF and meshes describing the Lincoln MKZ.
  </description>

  <license>BSD</license>
  <author email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslib</test_depend> <!-- Needed for ROS_DISTRO environment variable -->
  <test_depend>rviz</test_depend> <!-- Used to satisfy the roslaunch_add_file_check() test -->

</package>
